[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xzssh"
version = "0.17.0"
description = "Modern, interactive SSH configuration manager for OpenSSH"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "xzSSH Team" }
]
keywords = ["ssh", "config", "openssh", "management", "cli", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
  "rich>=10.0.0",
  "questionary>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/010228lxz/xzSSH"
Documentation = "https://github.com/010228lxz/xzSSH#readme"
Issues = "https://github.com/010228lxz/xzSSH/issues"
Repository = "https://github.com/010228lxz/xzSSH.git"

[project.scripts]
xzssh = "xzssh.cli.main:main"

[project.optional-dependencies]
dev = ["pytest", "argcomplete>=3.0"]
completion = ["argcomplete>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["xzssh*"]
